<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <GridLayout
            android:id= "@+id/GridLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="17"
            android:scrollbars="horizontal" >

            <TextView
                android:id="@+id/textmodule"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:background="@drawable/textviewborder"
                android:text="@string/HWModule" />

            <TextView
                android:id="@+id/textInputQ"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:background="@drawable/textviewborder"
                android:text="@string/inputQ" />

            <TextView
                android:id="@+id/textOutQ"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:background="@drawable/textviewborder"
                android:text="@string/outputQ" />

            <TextView
                android:id="@+id/textmcu"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:background="@drawable/textviewborder"
                android:text="@string/mcu" />

            <TextView
                android:id="@+id/textMcuIn"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textMcuOut"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/texthci"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:background="@drawable/textviewborder"
                android:text="@string/hci" />

            <TextView
                android:id="@+id/textHciIn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textHciOut"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textSecurity"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="3"
                android:background="@drawable/textviewborder"
                android:text="@string/security" />

            <TextView
                android:id="@+id/textSecurityIn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="3"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textSecurityOut"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="3"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textRx"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="4"
                android:background="@drawable/textviewborder"
                android:text="@string/RX" />

            <TextView
                android:id="@+id/textRxIn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="4"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textRxOut"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="4"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textMic"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="5"
                android:background="@drawable/textviewborder"
                android:text="@string/RX" />

            <TextView
                android:id="@+id/textMicIn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="5"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textMicOut"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="5"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX0"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="6"
                android:background="@drawable/textviewborder"
                android:text="@string/TX0" />

            <TextView
                android:id="@+id/textTX0In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="6"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX0Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="6"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX1"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="7"
                android:background="@drawable/textviewborder"
                android:text="@string/TX1" />

            <TextView
                android:id="@+id/textTX1In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="7"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX1Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="7"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX2"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="8"
                android:background="@drawable/textviewborder"
                android:text="@string/TX2" />

            <TextView
                android:id="@+id/textTX2In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="8"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX2Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="8"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX3"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="9"
                android:background="@drawable/textviewborder"
                android:text="@string/TX3" />

            <TextView
                android:id="@+id/textTX3In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="9"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX3Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="9"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX4"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="10"
                android:background="@drawable/textviewborder"
                android:text="@string/TX4" />

            <TextView
                android:id="@+id/textTX4In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="10"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTX4Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="10"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textSecurity2"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="11"
                android:background="@drawable/textviewborder"
                android:text="@string/security_sec" />

            <TextView
                android:id="@+id/textSecurity2In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="11"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textSecurity2Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="11"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textMic2"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="12"
                android:background="@drawable/textviewborder"
                android:text="@string/mic_sec" />

            <TextView
                android:id="@+id/textMic2In"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="12"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textMic2Out"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="12"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTrashCan"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="13"
                android:background="@drawable/textviewborder"
                android:text="@string/trash_can" />

            <TextView
                android:id="@+id/textTrashCanIn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="13"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTrashCanOut"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:layout_row="13"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textTx"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="14"
                android:background="@drawable/textviewborder"
                android:text="@string/TX" />

            <TextView
                android:id="@+id/textTxValue"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="14"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textRx2"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="15"
                android:background="@drawable/textviewborder"
                android:text="@string/RX" />

            <TextView
                android:id="@+id/textRx2Value"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="15"
                android:background="@drawable/textviewborder" />

            <TextView
                android:id="@+id/textAvaliable"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_row="16"
                android:background="@drawable/textviewborder"
                android:text="@string/avaliable" />

            <TextView
                android:id="@+id/textAvaliableValue"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_row="16"
                android:background="@drawable/textviewborder" />
        </GridLayout>        
        </ScrollView>     
</FrameLayout>       